<resources>
    <string name="app_name">Aewai-iou</string>
    <string name="welcome">Welcome!!!!</string>
    <string name="logout">Logout</string>
    <string name="enter_email">Enter email</string>
    <string name="aewai_iou">Aewai-iou</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign In here</string>
    <string name="title_activity_start1">Start1Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="finally_done">finally Done</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="lend">LEND</string>
    <string name="about_the_product">About the product</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="upload">Upload</string>
    <string name="borrower">Borrower</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="borrow">Borrow</string>
</resources>
